# txt-to-3d

./: PLAN.md  README.md  prompts.txt  pyproject.toml  setup-pod.sh
src/orchestrator/: server.py
stages/gen_3d/: pyproject.toml
stages/gen_3d/src/gen_3d/: pipeline.py  run.py  server.py
stages/image_gen/: pyproject.toml
stages/image_gen/src/image_gen/: pipeline.py  run.py  server.py
tests/: test_gateway.py
