[project]
name = "image-gen"
version = "0.1.0"
description = "Stage 1: text prompt -> generated image (FLUX.2-klein-4B)"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "fastapi",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "transformers>=5.7.0",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_gen"]
